# wgpu-lab

./: .gitignore  Cargo.toml  build.rs
shaders/: shader.frag  shader.vert  shader.wgsl
src/: framework.rs  main.rs  render.rs  utils.rs
src/utils/: floating_duration.rs
